# test-project

./: .whitesource  build.gradle  check.csproj  nuget.config  pacakges.lock.json  package-lock.json  package.json  packages.config  pom.xml  project.csproj  pyproject.toml  requirements.txt
