[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "Your project description here."
authors = ["Your Name <your.email@example.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.9"  # Adjust this to your desired Python version
alembic = "1.8.1"
boto3 = "1.26.121"
faker = "18.5.1"
gunicorn = "20.0.4"
locust = "2.15.1"
openapi-core = "0.13.8"
opentelemetry-api = "1.14.0"
opentelemetry-exporter-otlp-proto-grpc = "1.14.0"
opentelemetry-instrumentation-sqlalchemy = "0.35b0"
opentelemetry-instrumentation-tornado = "0.35b0"
opentelemetry-sdk = "1.14.0"
pact-python = "1.7.0"
psycopg2-binary = "2.9.5"
pycurl = "7.45.1"
pytz = "2022.6"
requests = "2.28.1"
retry = "0.9.2"
sentry-sdk = "1.11.1"
sqlalchemy = "1.4.44"
sqlalchemy-utcdatetime = "1.0.4"
toml = "0.10.2"
tornado = "6.2"
werkzeug = "2.3.0"

[tool.poetry.dev-dependencies]

# Add your development dependencies here

[tool.poetry.scripts]

# Add your scripts here, if any

